5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4067/executions/1601_2426.log
== SUBMITION (2019-03-25 19:37:33) 
-- CODE:
t = float(input("tempo de viagem: "))
v = float(input("velocidade do veiculo: "))
d = t*v
km = 12.0
l =  d*km

-- EXECUTION TIME:
0.14688
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:

-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:

-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:34:09) 
-- CODE:
t = float(input("tempo de viagem: "))
v = float(input("velocidade do veiculo: "))
distancia =t*d
litros = round(distancia/km,2)
km = 12.0
print (distancia)
print (litros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    distancia =t*d
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:34:28) 
-- CODE:
t = float(input("tempo de viagem: "))
v = float(input("velocidade do veiculo: "))
distancia =t*v
litros = round(distancia/km,2)
km = 12.0
print (distancia)
print (litros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    litros = round(distancia/km,2)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 18:34:56) 
-- CODE:
t = float(input("tempo de viagem: "))
v = float(input("velocidade do veiculo: "))
distancia =t*v
litros = round(distancia/km,3)
km = 12.0
print (distancia)
print (litros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    litros = round(distancia/km,3)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 18:31:44) 
-- CODE:
tempo = float(input("tempo gasto: "))
velocidade = float(input("velocidade media: "))
distancia = tempo*velocidade
litros = ditancia/12
print(distancia)
print(litros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    litros = ditancia/12
NameError: name 'ditancia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 18:31:47) 
-- CODE:
tempo = float(input("tempo gasto: "))
velocidade = float(input("velocidade media: "))
distancia = tempo*velocidade
litros = ditancia/12
print(distancia)
print(litros)
-- EXECUTION TIME:
0.198124
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2426/main.py", line 4, in <module>
    litros = ditancia/12
NameError: name 'ditancia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 18:31:51) 
-- CODE:
tempo = float(input("tempo gasto: "))
velocidade = float(input("velocidade media: "))
distancia = tempo*velocidade
litros = ditancia//12
print(distancia)
print(litros)
-- EXECUTION TIME:
0.129043
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2426/main.py", line 4, in <module>
    litros = ditancia//12
NameError: name 'ditancia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 18:31:53) 
-- CODE:
tempo = float(input("tempo gasto: "))
velocidade = float(input("velocidade media: "))
distancia = tempo*velocidade
litros = ditancia//12
print(distancia)
print(litros)
-- EXECUTION TIME:
0.142969
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2426/main.py", line 4, in <module>
    litros = ditancia//12
NameError: name 'ditancia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 18:34:00) 
-- CODE:
tempo = float(input("tempo gasto: "))
velocidade = float(input("velocidade media: "))
distancia = tempo*velocidade
litros = 12.0*distancia
print(distancia)
print(litros)
-- EXECUTION TIME:
0.122281
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
10800.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
7200.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
1152.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 18:34:00) 
-- CODE:
tempo = float(input("tempo gasto: "))
velocidade = float(input("velocidade media: "))
distancia = tempo*velocidade
litros = 12.0*distancia
print(distancia)
print(litros)
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 18:39:23) 
-- CODE:
tempo = float(input("tempo gasto: "))
velocidade = float(input("velocidade media: "))
distancia = velocidade * tempo
litros = distancia/12
print(distancia)
print(litros)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 18:39:36) 
-- CODE:
tempo = float(input("tempo gasto: "))
velocidade = float(input("velocidade media: "))
distancia = velocidade * tempo
litros = distancia/12
print(distancia)
print(litros)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 18:39:38) 
-- CODE:
tempo = float(input("tempo gasto: "))
velocidade = float(input("velocidade media: "))
distancia = velocidade * tempo
litros = distancia/12
print(distancia)
print(litros)
-- EXECUTION TIME:
0.145214
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
